# RoadCrossingSimulator

./: README.md
OgreProject3/OgreProject3/: .gitignore  App.cpp  App.h  CMakeLists.txt  CMakeSettings.json  CameraHandler.cpp  CameraHandler.h  Car.cpp  Car.h  Character.cpp  Character.h  CharacterHandler.cpp  CharacterHandler.h  CollidableCharacter.cpp  CollidableCharacter.h  DummyCharacter.cpp  DummyCharacter.h  Entity.cpp  GameController.cpp  GameController.h  GameOverScreen.cpp  GameOverScreen.h  GameWonScreen.cpp  GameWonScreen.h  Lane.cpp  Lane.h  LaneHandler.cpp  LaneHandler.h  OgreProject3.cpp  OgreProject3.h  PlayerCharacter.cpp  PlayerCharacter.h  Screen.cpp  Screen.h  SebastianVersion.sln  SebastianVersion.vcxproj  SebastianVersion.vcxproj.filters  SpaceClamper.cpp  SpaceClamper.h  TileHandler.cpp  (+3 more)
OgreProject3/OgreProject3/conf/: plugins_d.cfg  resources.cfg
OgreProject3/OgreProject3/dependencies/ogre/include/: OgreConfigPaths.h
OgreProject3/OgreProject3/dependencies/ogre/lib/Dependencies/: IrrXML.lib  SDL2.lib  SDL2main.lib  freetype.lib  pugixml.lib  zlibstatic.lib  zzip.lib
OgreProject3/OgreProject3/dependencies/ogre/lib/MinSizeRel/: Codec_Assimp.exp  Codec_Assimp.lib  Codec_STBI.exp  Codec_STBI.lib  DefaultSamples.exp  DefaultSamples.lib  OgreBites.exp  OgreBites.lib  OgreGLSupport.lib  OgreMain.exp  OgreMain.lib  OgreMeshLodGenerator.exp  OgreMeshLodGenerator.lib  OgreOverlay.exp  OgreOverlay.lib  OgrePaging.exp  OgrePaging.lib  OgreProperty.exp  OgreProperty.lib  OgreRTShaderSystem.exp  OgreRTShaderSystem.lib  OgreTerrain.exp  OgreTerrain.lib  OgreVolume.exp  OgreVolume.lib  Plugin_BSPSceneManager.exp  Plugin_BSPSceneManager.lib  Plugin_DotScene.exp  Plugin_DotScene.lib  Plugin_OctreeSceneManager.exp  Plugin_OctreeSceneManager.lib  Plugin_OctreeZone.exp  Plugin_OctreeZone.lib  Plugin_PCZSceneManager.exp  (+9 more)
OgreProject3/OgreProject3/resources/: Car.material  Car.mesh  Cube.material  Cube.mesh  Cube.mesh.xml  Cube.skeleton  Cube.skeleton.xml  Material.material  Student.blend  _Cube.skeleton  cCube.skeleton  jeep.material  jeep.mesh  lorry.material  student.material
OgreProject3/OgreProject3/resources/environment/: 2_Tree_Lane.mesh  3_Tree_Lane.mesh  Road_Lane.mesh  asphaltTexture.material  environment.material  environmentColors.material  groundTexture.material
PleaseWork2/: .gitignore  BasicTutorial1.cpp  CMakeLists.txt  CMakeSettings.json  resources.cfg
(+66 files in other folders)
